--- a/public/css/note.css
+++ b/public/css/note.css
@@ -4,7 +4,7 @@
   /* border: 2px solid red; */
   padding: 40px;
   background: var(--darkColor);
-  height: 80vh;
+  min-height: 80vh;
 }
 
 .details h1 {
@@ -19,7 +19,7 @@
 }
 
 .details h4 {
-  margin-bottom: 30px;
+  /* margin-bottom: 30px; */
   text-align: center;
   color: var(--textColor);
 }
@@ -36,12 +36,12 @@ a {
 
 .details p {
   /* border: 2px solid blue; */
-  width: 100%;
+  width: 80%;
   margin: auto;
   padding: 20px;
   color: var(--textColor);
-  font-family: cursive;
-  line-height: 3em;
+  /* font-family: cursive; */
+  line-height: 2em;
 }
 
 @media screen and (max-width: 1000px) {
